2015-09-18  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-312

	* src/m_oem.cc (oem): inversion_iterate_agenda_old used by ml and
	gn, while li uses inversion_iterate_agenda.

	* src/agendas.cc: Introduced inversion_iterate_agenda_old as a
	temporary solution. Changed set of input arguments to
	inversion_iterate_agenda.

2015-09-18  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-311

	* src/m_agenda.cc (AgendaExecute):

	Fix bug in scoping for WSVs that are defined as input of the agenda but
	changed by WSMs inside it. Their new values wrongly leaked into the
	caller's scope. Reported by Patrick.

	* controlfiles/artscomponents/agendas/TestAgendaExecute.arts:

	Add check for above case.

2015-09-17  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-310

	* src/m_oem.cc (oem): Some changes around the gin arguments. Most
	importantly, introduced yf_linear to trigger that the actual yf is
	calculated.

2015-09-15 Simon Pfreundschuh <simonpf@chalmers.se>

	* arts-2-3-309

	* src/m_oem.cc Added wrapper class for agenda execution and
	calls to OEM methods.

2015-09-14  Alex Bobryshev <oleksandr.bobryshev@uni-hamburg.de>

	* arts-2-3-308

	* Setup for microwave sensors (for now it is 
	fully consistent with AMSU-A and AMSU-B sensors. Added switch-variable
	met_mm_accuracy to select the number of monochromatic
	calculations to simulate these sensors.

	* controlfiles/CMakeLists.txt: Add TestMetMM to slow tests.

	* controlfiles/instruments/metmm/TestMetMM.arts:  Main controlfile

	* controlfiles/instuments/metmm/common_metmm.arts:

	Common agendas for metmm sensors.

	* controlfiles/instruments/metmm/abs_lines_metmm.xml.gz:

	HITRAN2012 5 to 600 GHz for H20, O2, N2 and O3.

	* controlfiles/instruments/metmm/ybatchREFERENCE.xml:

	Reference file for AMSU-B outermost viewing angle for all channels
	based on Garand profiles.

	* controlfiles/instruments/metmm/sensor_descriptions/sensor_amsua.arts