@@ -1,3 +1,11 @@
+2015-09-18  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-313
+
+	* src/m_agenda.cc (AgendaExecute):
+
+	Don't scope WSVs that are input _and_ output.
+
 2015-09-18  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* arts-2-3-312
